--- a/A2_CaseyHon.Rmd
+++ b/A2_CaseyHon.Rmd
@@ -1,10 +1,12 @@
 ---
 title: "Assignment 2"
 author: "Casey Hon"
-date: "13/03/2022"
+date: "r Sys.Date()'
 output:
   html_document:
     df_print: paged
+    toc: true
+    toc_depth: 2
 ---
 ```{r, message = FALSE}
 suppressWarnings({
@@ -20,8 +22,8 @@ suppressWarnings({
   if (! requireNamespace("knitr", quietly = TRUE)) {
     BiocManager::install("knitr")
   }
-  if (! requireNamespace("DESeq2", quietly = TRUE)) {
-    BiocManager::install("DESeq2")
+  if (! requireNamespace("ggrepel", quietly = TRUE)) {
+    BiocManager::install("ggrepel")
   }
 })
 ```
@@ -37,7 +39,8 @@ knitr::kable(group_counts, caption = "Number of groups in each condition")
 The original dataset had over 60,000 genes. After using edgeR filtering protocols, 13,780 genes were left. 8 genes were duplicates so those were removed. The data was then normalized using the Trimed Mean of M-values (TMM) method. After normalizing, a Multi-Dimensional Scaling (MDS) plot was used to visualize clustering, but no clear clustering by sample group was seen. 
 
 ```{r, child = c('a1_casey.Rmd')}
-ggplot2::qplot(X1, X2, color = sample_group, data = mds, main = "MDS plot of Poisson Distances by sample group")
+library(ggplot2)
+qplot(X1, X2, color = sample_group, data = mds, main = "MDS plot of Poisson Distances by sample group")
 ```
 
 Thus, this notebook aims to take this normalized expression data and:
@@ -53,7 +56,7 @@ groups <- groups
 From the first assignment, we know that the possible groups were `r colnames(groups)`. Based on the MDS plot of the normalized data, it seems like there is a pattern that the Healthy Control (HC) group (in pink) tends to be on the left side, the Persons living with HIV (PLWH) group (in green) tending to be more on the right, and the pre-exposure prophylaxis (PrEP) group (in blue) towards the bottom middle. Although this wasn't a very clear distinction of clusters, but plotting by other conditions, by patient or by challenged status made the clustering  even more obscure. Thus, I'm choosing to design my model by sample group (HC, PLWH, and PrEP).
 
 ```{r, child = c('a1_casey.Rmd')}
-# code referred to: https://bioinformatics-core-shared-training.github.io/RNAseq-R/rna-seq-de.nb.html, http://bioconductor.org/packages/devel/bioc/vignettes/DESeq2/inst/doc/DESeq2.html, and lecture 6
+# code referred to: https://bioinformatics-core-shared-training.github.io/RNAseq-R/rna-seq-de.nb.html and lecture 6
 library(stats)
 library(SummarizedExperiment)
 library(limma)
@@ -69,6 +72,7 @@ fit <- lmFit(es, design = cond_mod)
 fit2 <- eBayes(fit, trend = TRUE) # calculates p-values too
 
 # sort by p-value
+pval_thres <- 0.05 
 fit_pvals <- data.frame(fit2$p.value)
 colnames(fit_pvals) <- c("pvalue", "sample_groupPLWH", "sample_groupPrEP")
 fit_pvals <- fit_pvals[order(fit_pvals$pvalue), ]
@@ -78,7 +82,7 @@ knitr::kable(fit_pvals[1:10, ], row.names = TRUE, format = "markdown",
 ```
 We can see from table 1 that just the top 10 genes with smallest p-values have nearly 0 as p-values, which means the null hypothesis is rejected (there is strong differential expression). 
 
-There are exactly `r length(which(fit_pvals$pvalue < 0.05))` genes that have a p-value of less than 0.05, which is `r length(which(fit_pvals$pvalue < 0.05)) / nrow(fit_pvals) * 100`%. 
+There are exactly `r length(which(fit_pvals$pvalue < pval_thres))` genes that have a p-value of less than 0.05, which is `r length(which(fit_pvals$pvalue < pval_thres)) / nrow(fit_pvals) * 100`%. 
 
 However, it's important to note these statistics are before correcting p-values for multiple testing. We'll adjust for this using the Benjamini-Hochberg Procedure, which controls for the fact that some small p-values may occur by chance (Glen, n.d.).
 
@@ -88,10 +92,33 @@ mhc <- topTable(fit2, coef = ncol(cond_mod), adjust.method = "BH",
                 number = nrow(es), sort.by = "p")
 knitr::kable(mhc[1:10, c("P.Value", "adj.P.Val")], row.names = TRUE, format = "markdown", digits = 32, caption = "Table 2: Top 10 genes with lowest adjusted p-values")
 ```
-Based on table 2, we see that the 10 genes with the lowest p-values are completely different. Now, there are `r length(which(mhc$adj.P.Val < 0.05))` genes that have a p-value of less than 0.05, which is `r length(which(mhc$adj.P.Val < 0.05)) / nrow(mhc) * 100`%. 
+Based on table 2, we see that the 10 genes with the lowest p-values are completely different. Now, there are `r length(which(mhc$adj.P.Val < pval_thres))` genes that have a p-value of less than 0.05, which is `r length(which(mhc$adj.P.Val < pval_thres)) / nrow(mhc) * 100`%. 
 
 ```{r}
-# MA plot or volcano plot, highlight genes of interest
+# referred to https://biocorecrg.github.io/CRG_RIntroduction/volcano-plots.html
+# volcano plot, highlight genes of interest
+log_thres <- 1.5 
+
+mhc$diffexpressed <- "none"
+mhc$diffexpressed[mhc$logFC > log_thres & mhc$P.Value < pval_thres] <- "up" # up-regulated
+mhc$diffexpressed[mhc$logFC < -log_thres & mhc$P.Value < pval_thres] <- "down" # down-regulated
+
+mhc$delabel <- NA
+mhc$gene_name <- rownames(mhc)
+mhc$delabel[mhc$diffexpressed != "none"] <- mhc$gene_name[mhc$diffexpressed != "none"]
+
+volc <- ggplot(data = mhc, aes(x=logFC, y=-log10(P.Value),
+               col = diffexpressed, label = delabel)) +
+  geom_point() +
+  theme_minimal() +
+  ggrepel::geom_text_repel() +
+  labs(title = "Volcano Plot highlighting Differentially-Expressed Genes",
+       x = "log fold change", y = "-log10(p-value)", 
+       col = "Differential Expression") +
+  scale_color_manual(values = c("blue", "black", "red"), labels = c("down-regulated", "none", "up-regulated")) +
+  geom_hline(yintercept = -log10(pval_thres), col = "red") +
+  geom_vline(xintercept = c(-log_thres, log_thres), col = "red") 
+volc
 
 # visualize top hits with heatmap
 
@@ -99,9 +126,13 @@ Based on table 2, we see that the 10 genes with the lowest p-values are complete
 
 1. Calculate p-values for each of the genes in your expression set. How many genes were significantly differentially expressed? What thresholds did you use and why?
 
+There are exactly `r length(which(fit_pvals$pvalue < pval_thres))` genes that have a p-value of less than 0.05, which is `r length(which(fit_pvals$pvalue < pval_thres)) / nrow(fit_pvals) * 100`%. 
+I chose to stay with the conventional p-value threshold of 0.05 based on arguments by Di Leo & Sardanelli (2020). Achieving enough power with a lower threshold for p-value would require larger sample sizes, which can be difficult especially with this line of research and acquiring the type of data that this study uses (Di Leo & Sardanelli, 2020).
+I used a 1.5 fold change threshold to determine whether genes were up or down regulated, based on the opinions of a couple forum posts (Sulaiman, 2018). 
+
 2. Multiple hypothesis testing - correct your p-values using a multiple hypothesis correction method. Which method did you use? And Why? How many genes passed correction?
 
-`r length(which(mhc$adj.P.Val < 0.05))` genes passed correction.
+I chose to use the default (BH) method for correction as it is recommended as one of the most superior in terms of user-friendliness and documentation, and since it is the default in limma too so using this method could increase probability of potential comparison with other analyses (Korthauer et al., 2019; Ritchie et al., 2015). IHW was also ranked as a top method, but I chose against this since it demonstrated low False Discovery Rate (FDR) compared to other methods (Korthauer et al., 2019). However, IHW did have very similar patterns to BH in terms of FDR control, applicability, and usability (Korthauer et al., 2019). `r length(which(mhc$adj.P.Val < pval_thres))` genes passed correction.
 
 3. Show the amount of differentially expressed genes using an MA Plot or a Volcano plot. Highlight genes of interest.
 
@@ -128,6 +159,16 @@ Based on table 2, we see that the 10 genes with the lowest p-values are complete
 
 Correa-Macedo, W., et al. "Alveolar macrophages from persons living with HIV show impaired epigenetic response to Mycobacterium tuberculosis." *The Journal of clinical investigation* vol. 131,22 (2021): e148013. <doi:10.1172/JCI148013>
 
+Di Leo, G., Sardanelli, F. Statistical significance: p value, 0.05 threshold, and applications to radiomics—reasons for a conservative approach. Eur Radiol Exp 4, 18 (2020). https://doi.org/10.1186/s41747-020-0145-y
+
 Glen, S. "Benjamini-Hochberg Procedure" From StatisticsHowTo.com: Elementary Statistics for the rest of us! https://www.statisticshowto.com/benjamini-hochberg-procedure/
 
+Isserlin, R. "Lecture 6 - Differential Expression" (2022).
+
+Korthauer, K., Kimes, P.K., Duvallet, C. et al. A practical guide to methods controlling false discoveries in computational biology. Genome Biol 20, 118 (2019). https://doi.org/10.1186/s13059-019-1716-1
+
 Love, M.I., Huber, W., Anders, S. (2014) Moderated estimation of fold change and dispersion for RNA-seq data with DESeq2. Genome Biology, 15:550. 10.1186/s13059-014-0550-8
+
+Ritchie ME, Phipson B, Wu D, Hu Y, Law CW, Shi W, Smyth GK (2015). “limma powers differential expression analyses for RNA-sequencing and microarray studies.” Nucleic Acids Research, 43(7), e47. doi: 10.1093/nar/gkv007.
+
+Sulaiman, JE. (2017). "Do you know what is the threshold for up and down-regulation in proteomics?" ResearchGate. https://www.researchgate.net/post/Do-you-know-what-is-the-threshold-for-up-and-down-regulation-in-proteomics
