--- a/A2_CaseyHon.Rmd
+++ b/A2_CaseyHon.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Assignment 2"
 author: "Casey Hon"
-date: "r Sys.Date()"
+date: `r Sys.Date()`
 output:
   html_document:
     df_print: paged
@@ -36,10 +36,10 @@ GEO ID: GSE165708
 
 The original dataset had over 60,000 genes. After using edgeR filtering protocols, 13,780 genes were left. 8 genes were duplicates so those were removed. The data was then normalized using the Trimed Mean of M-values (TMM) method. After normalizing, a Multi-Dimensional Scaling (MDS) plot was used to visualize clustering, but no clear clustering by sample group was seen. 
 
-```{r, message = FALSE}
+```{r message=FALSE}
 library(ggplot2)
-mds <- readRDS("mds.rds")
-qplot(X1, X2, color = sample_group, data = mds, main = "MDS plot of Poisson Distances by sample group")
+mds <- readRDS(file=file.path(getwd(), "data", "mds.rds"))
+qplot(X1, X2, color = sample_group, data = mds, main = "Figure 1: MDS plot of Poisson Distances by sample group")
 ```
 
 Thus, this notebook aims to take this normalized expression data and:
@@ -55,11 +55,11 @@ library(Biobase)
 library(limma)
 library(knitr)
 # create design matrix
-groups <- readRDS("groups.rds")
+groups <- readRDS(file=file.path(getwd(), "data", "groups.rds"))
 cond_mod <- model.matrix(~ groups$sample_group)
 
 # create data matrix
-normed_log_counts <- readRDS("normed_log_counts.rds")
+normed_log_counts <- readRDS(file=file.path(getwd(), "data","normed_log_counts.rds"))
 rownames(normed_log_counts) <- make.unique(rownames(normed_log_counts)) # TO-DO: why are there duplicated rownames...? how is that possible?
 es <- ExpressionSet(assayData = normed_log_counts)
 
@@ -108,7 +108,7 @@ volc <- ggplot(data = mhc, aes(x=logFC, y=-log10(P.Value),
   geom_point() +
   theme_minimal() +
   ggrepel::geom_text_repel() +
-  labs(title = "Volcano Plot highlighting Differentially-Expressed Genes",
+  labs(title = "Figure 2: Volcano Plot highlighting Differentially-Expressed Genes",
        x = "log fold change", y = "-log10(p-value)", 
        col = "Differential Expression") +
   scale_color_manual(values = c("blue", "black", "red"), labels = c("down-regulated", "none", "up-regulated")) +
@@ -122,40 +122,57 @@ Out of `r nrow(mhc)` genes total, `r length(mhc$gene_name[mhc$diffexpressed == "
 
 ```{r}
 kable(mhc[mhc$diffexpressed == "up", c("logFC", "P.Value", "adj.P.Val")],
-      caption = "Up-regulated genes",
+      caption = "Table 3: Up-regulated genes",
       col.names = c("log fold change", "p-value", "adjusted p-value"))
 kable(mhc[mhc$diffexpressed == "down", c("logFC", "P.Value", "adj.P.Val")],
-      caption = "Down-regulated genes",
+      caption = "Table 4: Down-regulated genes",
       col.names = c("log fold change", "p-value", "adjusted p-value"))
 ```
 
 ```{r}
 # visualize top hits with heatmap
 library(pheatmap)
-
+library(ComplexHeatmap)
 hm_matrix <- normed_log_counts[which(mhc$diffexpressed == "up" | mhc$diffexpressed == "down"),]
 hm_matrix[which(!is.finite(hm_matrix))] <- 0 # remove infinite value
 hm_matrix <- t(scale(t(hm_matrix))) # scale to normalize
-pheatmap(hm_matrix, show_colnames = FALSE)
-
+annot <- data.frame()
+# referred to: https://jokergoo.github.io/ComplexHeatmap-reference/book/heatmap-annotations.html#block-annotation
+Heatmap(hm_matrix, column_order = order(sapply(strsplit(colnames(hm_matrix),"\\."), `[`, 1)),
+        name = "mat",
+        column_title = "Figure 3: Top Genes by Differential Expression",
+        row_names_gp = gpar(fontsize = 6),
+        column_names_gp = gpar(fontsize = 5),
+        column_split = groups$sample_group,
+        top_annotation = HeatmapAnnotation(foo = anno_block(gp = gpar(fill = 0),
+          labels = c("HC", "PLWH", "PrEP"), 
+          labels_gp = gpar(col = "black", fontsize = 8))))
 ```
+This heatmap is ordered column-wise by patient, with every two columns representing one patient (every other column is the challenged sample). We can see that there is very little clustering by patient. Each block represents one sample group (HC, PLWH, or PrEP). 
 
-1. Calculate p-values for each of the genes in your expression set. How many genes were significantly differentially expressed? What thresholds did you use and why?
+**1. Calculate p-values for each of the genes in your expression set. How many genes were significantly differentially expressed? What thresholds did you use and why?**
 
 There are exactly `r length(which(fit_pvals$pvalue < pval_thres))` genes that have a p-value of less than 0.05, which is `r length(which(fit_pvals$pvalue < pval_thres)) / nrow(fit_pvals) * 100`%. 
 I chose to stay with the conventional p-value threshold of 0.05 based on arguments by Di Leo & Sardanelli (2020). Achieving enough power with a lower threshold for p-value would require larger sample sizes, which can be difficult especially with this line of research and acquiring the type of data that this study uses (Di Leo & Sardanelli, 2020).
 I used a 1.5 fold change threshold to determine whether genes were up or down regulated, based on the opinions of a couple forum posts (Sulaiman, 2018). 
 
-2. Multiple hypothesis testing - correct your p-values using a multiple hypothesis correction method. Which method did you use? And Why? How many genes passed correction?
+**2. Multiple hypothesis testing - correct your p-values using a multiple hypothesis correction method. Which method did you use? And Why? How many genes passed correction?**
 
 I chose to use the default Benjamini-Hochberg (BH) method for correction as it is recommended as one of the most superior in terms of user-friendliness and documentation, and since it is the default in limma too so using this method could increase probability of potential comparison with other analyses (Korthauer et al., 2019; Ritchie et al., 2015). IHW was also ranked as a top method, but I chose against this since it demonstrated low False Discovery Rate (FDR) compared to other methods (Korthauer et al., 2019). However, IHW did have very similar patterns to BH in terms of FDR control, applicability, and usability (Korthauer et al., 2019). `r length(which(mhc$adj.P.Val < pval_thres))` genes passed correction.
 
-3. Show the amount of differentially expressed genes using an MA Plot or a Volcano plot. Highlight genes of interest.
+**3. Show the amount of differentially expressed genes using an MA Plot or a Volcano plot. Highlight genes of interest.**
 
-4. Visualize your top hits using a heatmap. Do you conditions cluster together? Explain why or why not.
+See above Volcano plot.
 
+**4. Visualize your top hits using a heatmap. Do you conditions cluster together? Explain why or why not.**
+
+We see that there are a group of genes in the top half of the map that are more up-regulated in healthy control that are more down-regulated in the PLWH (Persons living with HIV) sample group. In the PrEP (preexposure prophylaxis) group, we do not see as much of this pattern. When I tried to order the columns by the other conditions (like by patient or challenged status), there was no distinguishable clustering. This clustering by sample group is expected based on the MDS plot from earlier. 
 
 ## Thresholded Over-Representation Analysis
+```{r}
+
+```
+
 1. Which method did you choose and why?
 
 2. What annotation data did you use and why? What version of the annotation are you using?
@@ -178,6 +195,8 @@ Correa-Macedo, W., et al. "Alveolar macrophages from persons living with HIV sho
 Di Leo, G., Sardanelli, F. Statistical significance: p value, 0.05 threshold, and applications to radiomics—reasons for a conservative approach. Eur Radiol Exp 4, 18 (2020). https://doi.org/10.1186/s41747-020-0145-y
 
 Glen, S. "Benjamini-Hochberg Procedure" From StatisticsHowTo.com: Elementary Statistics for the rest of us! https://www.statisticshowto.com/benjamini-hochberg-procedure/
+
+Gu, Z. "ComplexHeatmap Complete Reference" (2021). https://jokergoo.github.io/ComplexHeatmap-reference/book/
 
 Isserlin, R. "Lecture 6 - Differential Expression" (2022).
 
