--- a/A2_CaseyHon.Rmd
+++ b/A2_CaseyHon.Rmd
@@ -1,12 +1,13 @@
 ---
 title: "Assignment 2"
 author: "Casey Hon"
-date: `r Sys.Date()`
+date: "`r Sys.Date()`"
 output:
   html_document:
     df_print: paged
     toc: true
     toc_depth: 2
+bibliography: a2_caseyhon.bib
 ---
 ```{r, message = FALSE}
 suppressWarnings({
@@ -25,18 +26,23 @@ suppressWarnings({
   if (! requireNamespace("ggrepel", quietly = TRUE)) {
     BiocManager::install("ggrepel")
   }
+  if (! requireNamespace("gprofiler2", quietly = TRUE)) {
+    BiocManager::install("gprofiler2")
+  }
 })
 ```
 
 ## Introduction
-In Assignment #1, I analyzed RNA-seq data from the study *Alveolar macrophages from persons living with HIV show impaired epigenetic response to Mycobacterium tuberculosis* (Correa-Macedo et al., 2021). The data contained 16 control subjects who were HIV-free (HC), 20 persons living with HIV receiving ART (PLWH), and 14 subjects who received ART as preexposure prophylaxis (PrEP) to prevent HIV infection. Each sample was challenged with *M. tuberculosis* in vitro.
+In Assignment #1, I analyzed RNA-seq data from the study *Alveolar macrophages from persons living with HIV show impaired epigenetic response to Mycobacterium tuberculosis* (Correa-Macedo et al., 2021). Individuals with HIV are at higher risk to have tuberculosis (TB), and this is often due to infection with *Mycobacterium tuberculosis* (*M. tuberculosis*) that rapidly progresses to disease (Correa-Macedo et al., 2021). Alveolar macrophages (AMs) are the first cells in the immune system that interact with *M. tuberculosis*, however their interaction with HIV and antiretroviral therapy (ART) is still unknown (Correa-Macedo et al., 2021). Thus, this study aimed to investigate the transcriptomic and epigenetic response of AMs to *M. tuberculosis* and how HIV and ART play a part in these mechanisms.
+
+AMs were obtained from 16 control subjects who were HIV-free (HC), 20 persons living with HIV receiving ART (PLWH), and 14 subjects who received ART as preexposure prophylaxis (PrEP) to prevent HIV infection. Each sample was challenged with *M. tuberculosis* in vitro. 
 
 Some basic statistics:
 GEO ID: GSE165708
 
 The original dataset had over 60,000 genes. After using edgeR filtering protocols, 13,780 genes were left. 8 genes were duplicates so those were removed. The data was then normalized using the Trimed Mean of M-values (TMM) method. After normalizing, a Multi-Dimensional Scaling (MDS) plot was used to visualize clustering, but no clear clustering by sample group was seen. 
 
-```{r message=FALSE}
+```{r message=FALSE, warning=FALSE}
 library(ggplot2)
 mds <- readRDS(file=file.path(getwd(), "data", "mds.rds"))
 qplot(X1, X2, color = sample_group, data = mds, main = "Figure 1: MDS plot of Poisson Distances by sample group")
@@ -50,7 +56,7 @@ Thus, this notebook aims to take this normalized expression data and:
 ## Differential Gene Expression
 From the first assignment, we know that the possible groups were sample group, patient, and whether or not the sample was challenged. Based on the MDS plot of the normalized data, it seems like there is a pattern that the Healthy Control (HC) group (in pink) tends to be on the left side, the Persons living with HIV (PLWH) group (in green) tending to be more on the right, and the pre-exposure prophylaxis (PrEP) group (in blue) towards the bottom middle. Although this wasn't a very clear distinction of clusters, but plotting by other conditions, by patient or by challenged status made the clustering  even more obscure. Thus, I'm choosing to design my model by sample group (HC, PLWH, and PrEP).
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 library(Biobase)
 library(limma)
 library(knitr)
@@ -90,9 +96,11 @@ knitr::kable(mhc[1:10, c("P.Value", "adj.P.Val")], row.names = TRUE, format = "m
 ```
 Based on table 2, we see that the 10 genes with the lowest p-values are completely different. Now, there are `r length(which(mhc$adj.P.Val < pval_thres))` genes that have a p-value of less than 0.05, which is `r length(which(mhc$adj.P.Val < pval_thres)) / nrow(mhc) * 100`%. 
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 # referred to https://biocorecrg.github.io/CRG_RIntroduction/volcano-plots.html
 # volcano plot, highlight genes of interest
+library(ggrepel)
+options(ggrepel.max.overlaps = Inf)
 log_thres <- 1.5 
 
 mhc$diffexpressed <- "none"
@@ -107,7 +115,7 @@ volc <- ggplot(data = mhc, aes(x=logFC, y=-log10(P.Value),
                col = diffexpressed, label = delabel)) +
   geom_point() +
   theme_minimal() +
-  ggrepel::geom_text_repel() +
+  geom_text_repel(force = 0.8) +
   labs(title = "Figure 2: Volcano Plot highlighting Differentially-Expressed Genes",
        x = "log fold change", y = "-log10(p-value)", 
        col = "Differential Expression") +
@@ -115,7 +123,6 @@ volc <- ggplot(data = mhc, aes(x=logFC, y=-log10(P.Value),
   geom_hline(yintercept = -log10(pval_thres), col = "red") +
   geom_vline(xintercept = c(-log_thres, log_thres), col = "red") 
 volc
-
 ```
 
 Out of `r nrow(mhc)` genes total, `r length(mhc$gene_name[mhc$diffexpressed == "up"])` genes were up-regulated, and `r length(mhc$gene_name[mhc$diffexpressed == "down"])` genes were down-regulated.
@@ -129,7 +136,7 @@ kable(mhc[mhc$diffexpressed == "down", c("logFC", "P.Value", "adj.P.Val")],
       col.names = c("log fold change", "p-value", "adjusted p-value"))
 ```
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 # visualize top hits with heatmap
 library(pheatmap)
 library(ComplexHeatmap)
@@ -148,6 +155,7 @@ Heatmap(hm_matrix, column_order = order(sapply(strsplit(colnames(hm_matrix),"\\.
           labels = c("HC", "PLWH", "PrEP"), 
           labels_gp = gpar(col = "black", fontsize = 8))))
 ```
+
 This heatmap is ordered column-wise by patient, with every two columns representing one patient (every other column is the challenged sample). We can see that there is very little clustering by patient. Each block represents one sample group (HC, PLWH, or PrEP). 
 
 **1. Calculate p-values for each of the genes in your expression set. How many genes were significantly differentially expressed? What thresholds did you use and why?**
@@ -169,41 +177,66 @@ See above Volcano plot.
 We see that there are a group of genes in the top half of the map that are more up-regulated in healthy control that are more down-regulated in the PLWH (Persons living with HIV) sample group. In the PrEP (preexposure prophylaxis) group, we do not see as much of this pattern. When I tried to order the columns by the other conditions (like by patient or challenged status), there was no distinguishable clustering. This clustering by sample group is expected based on the MDS plot from earlier. 
 
 ## Thresholded Over-Representation Analysis
-```{r}
+```{r, message=FALSE, warning=FALSE}
+library(gprofiler2)
+# write thresholded lists of genes
+upreg_genes <- mhc$gene_name[mhc$diffexpressed == "up"]
+write.table(x = upreg_genes,
+            file = file.path("data", "upregulated_genes.txt"))
 
+downreg_genes <- mhc$gene_name[mhc$diffexpressed == "down"]
+write.table(x = downreg_genes,
+            file = file.path("data", "downregulated_genes.txt"))
+# calculate rank
+mhc$rank <- -log(mhc$P.Value, base = 10) * sign(mhc$logFC)
+ranked_genes <- mhc[, c("gene_name", "rank")]
+write.table(x = ranked_genes,
+            file = file.path("data", "ranked_genes.txt"))
+
+all_genes <- mhc$gene_name[mhc$diffexpressed != "none"]
+write.table(all_genes, file = file.path("data", "all_genes.txt"))
+
+gprof <- gost(query = all_genes, organism = "hsapiens",
+                   domain_scope = "custom",
+                   custom_bg = rownames(mhc)) # use all genes from array as background
+gprof_plot <- gostplot(gprof, capped = FALSE, interactive = T)
+gprof_plot
+```
+```{r}
+gprof_up <- gost(query = upreg_genes, organism = "hsapiens",
+                   domain_scope = "custom",
+                   custom_bg = rownames(mhc)) 
+gprof_up_plot <- gostplot(gprof_up, capped = FALSE, interactive = T)
+gprof_up_plot
 ```
 
-1. Which method did you choose and why?
+```{r}
+gprof_down <- gost(query = downreg_genes, organism = "hsapiens",
+                   domain_scope = "custom",
+                   custom_bg = rownames(mhc)) 
+gprof_down_plot <- gostplot(gprof_down, capped = FALSE, interactive = T)
+gprof_down_plot
+```
 
-2. What annotation data did you use and why? What version of the annotation are you using?
+**1. Which method did you choose and why?**
+I chose to use Over-Representation Analysis (ORA) as the gene set enrichment analysis method since it is one of the most widely used and simple (Maleki et al., 2020).
 
-3. How many genesets were returned with what thresholds?
+**2. What annotation data did you use and why? What version of the annotation are you using?**
 
-4. Run the analysis using the up-regulated set of genes, and the down-regulated set of genes separately. How do these results compare to using the whole list (i.e all differentially expressed genes together vs. the up-regulated and down regulated differentially expressed genes separately)?
+I used most data sources available for the homo sapiens organism since the data is from human cells. I excluded TRANSFAC as the data is not related to transcription factors, **TO-DO**
 
+**3. How many genesets were returned with what thresholds?**
+
+12 genesets were returned with the default threshold 0.05, which is the same p-value significance threshold I used throughout this notebook.
+
+**4. Run the analysis using the up-regulated set of genes, and the down-regulated set of genes separately. How do these results compare to using the whole list (i.e all differentially expressed genes together vs. the up-regulated and down regulated differentially expressed genes separately)?**
+
+In the analysis of just the up-regulated set of genes, only 3 genesets were returned. All of these genesets were from the Human Phenotype Ontology (HP) datasource. For the down-regulated set, there were also only 3 genesets returned. One geneset was from the biological process source (GO:BP) and two were from the Kyoto Encyclopedia of Genes and Genomes (KEGG).
 
 ## Interpretation
-1. Do the over-representation results support conclusions or mechanism discussed in the original paper?
-
-2. Can you find evidence, i.e. publications, to support some of the results that you see. How does this evidence support your results.
+**1. Do the over-representation results support conclusions or mechanism discussed in the original paper?**
 
 
-## References
 
-Correa-Macedo, W., et al. "Alveolar macrophages from persons living with HIV show impaired epigenetic response to Mycobacterium tuberculosis." *The Journal of clinical investigation* vol. 131,22 (2021): e148013. <doi:10.1172/JCI148013>
+**2. Can you find evidence, i.e. publications, to support some of the results that you see. How does this evidence support your results.**
 
-Di Leo, G., Sardanelli, F. Statistical significance: p value, 0.05 threshold, and applications to radiomics—reasons for a conservative approach. Eur Radiol Exp 4, 18 (2020). https://doi.org/10.1186/s41747-020-0145-y
-
-Glen, S. "Benjamini-Hochberg Procedure" From StatisticsHowTo.com: Elementary Statistics for the rest of us! https://www.statisticshowto.com/benjamini-hochberg-procedure/
-
-Gu, Z. "ComplexHeatmap Complete Reference" (2021). https://jokergoo.github.io/ComplexHeatmap-reference/book/
-
-Isserlin, R. "Lecture 6 - Differential Expression" (2022).
-
-Korthauer, K., Kimes, P.K., Duvallet, C. et al. A practical guide to methods controlling false discoveries in computational biology. Genome Biol 20, 118 (2019). https://doi.org/10.1186/s13059-019-1716-1
-
-Love, M.I., Huber, W., Anders, S. (2014) Moderated estimation of fold change and dispersion for RNA-seq data with DESeq2. Genome Biology, 15:550. 10.1186/s13059-014-0550-8
-
-Ritchie ME, Phipson B, Wu D, Hu Y, Law CW, Shi W, Smyth GK (2015). “limma powers differential expression analyses for RNA-sequencing and microarray studies.” Nucleic Acids Research, 43(7), e47. doi: 10.1093/nar/gkv007.
-
-Sulaiman, JE. (2017). "Do you know what is the threshold for up and down-regulation in proteomics?" ResearchGate. https://www.researchgate.net/post/Do-you-know-what-is-the-threshold-for-up-and-down-regulation-in-proteomics
