--- a/a2_caseyhon.bib
+++ b/a2_caseyhon.bib
@@ -174,4 +174,24 @@ ggplot2},
 title={Lecture 6 - Differential Expression}, 
 author={Isserlin, Ruth}} 
  
+@article{maan2017chromosome,
+  title={The Y chromosome: a blueprint for men’s health?},
+  author={Maan, Akhlaq A and Eales, James and Akbarov, Artur and Rowland, Joshua and Xu, Xiaoguang and Jobling, Mark A and Charchar, Fadi J and Tomaszewski, Maciej},
+  journal={European Journal of Human Genetics},
+  volume={25},
+  number={11},
+  pages={1181--1188},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
 
+@article{kedzierska2001cytokines,
+  title={Cytokines and HIV-1: interactions and clinical implications},
+  author={Kedzierska, Katherine and Crowe, Suzanne M},
+  journal={Antiviral Chemistry and Chemotherapy},
+  volume={12},
+  number={3},
+  pages={133--150},
+  year={2001},
+  publisher={SAGE Publications Sage UK: London, England}
+}
